修复测试错误。（奇怪，Simulate应该是没有timer日志的，哪来的？待确认。）